Added LICENSE note when present

--- a/test/fixtures/LicenseFont.css
+++ b/test/fixtures/LicenseFont.css
@@ -1,4 +1,4 @@
-/* A super secret license */
+/* LICENSE: A super secret license */
 @font-face {
   font-family: 'LicenseFont';
   src: url('./LicenseFont.eot');
