--- a/lib/rack-fontserve/views/stylesheet.erb
+++ b/lib/rack-fontserve/views/stylesheet.erb
@@ -1,4 +1,4 @@
-<% if @font.license? %>/* <%= @font.license %> */<% end %>
+<% if @font.license? %>/* LICENSE: <%= @font.license %> */<% end %>
 @font-face {
   font-family: '<%= @font.name %>';
   <% if format?('eot') %>src: url('<%= "./#{@font.name}.eot" %>');<% end %>
